--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://i.ibb.co/t3TSxnY/icons8-island-on-water-48.png" type="image/x-icon">
     <title>Dream Wings Traveler</title>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <header id="header_part" >
+    <header id="header_part">
         <div class="container">
             <nav>
                 <div class="logo">
@@ -27,17 +31,18 @@
             </nav>
             <div class="banner">
                 <h1>Explore Your Travel</h1>
-                <p>Discover the world with ease and excitement through our holiday agency,<br> where personalized itineraries and seamless travel experiences await.</p>
+                <p>Discover the world with ease and excitement through our holiday agency,<br> where personalized
+                    itineraries and seamless travel experiences await.</p>
                 <div class="form">
                     <div class="form_box">
-                        <input  type="search" placeholder="Where go">
+                        <input type="search" placeholder="Where go">
                     </div>
                     <div class="form_box">
-                        <input  type="search" placeholder="When">
+                        <input type="search" placeholder="When">
                         <img class="input_icon" src="Images/arrow.png" alt="arrow">
                     </div>
                     <div class="form_box">
-                        <input  type="search" placeholder="Select type">
+                        <input type="search" placeholder="Select type">
                         <img class="input_icon" src="Images/arrow.png" alt="">
                     </div>
                     <div class="form_box">
@@ -47,20 +52,33 @@
             </div>
         </div>
     </header>
-    <main >
+    <main>
         <!-- popular section  -->
         <section id="popular_part">
             <div class="container">
                 <div class="popular_content">
                     <div class="popular_text">
                         <h2 class="section_head">Our Popular Tour</h2>
-                        <p class="section_description"> Holiday travel agencies help clients plan their trips by offering expert <br> advice on destinations, travel itineraries, and activities. </p>
+                        <p class="section_description"> Holiday travel agencies help clients plan their trips by
+                            offering expert <br> advice on destinations, travel itineraries, and activities. </p>
                         <ul>
-                            <li><p class="section_description">Travel agencies handle the booking of various components of a trip,<br> accommodations, transportation, and activities.</p></li>
-                            <li><p class="section_description">Holiday travel agencies offer ongoing support to their clients, <br>both before and during the trip. </p></li>
-                            <li><p class="section_description">Some holiday travel agencies specialize in certain types of vacations,<br> such as luxury travel, adventure trips,</p></li>
+                            <li>
+                                <p class="section_description">Travel agencies handle the booking of various components
+                                    of a trip,<br> accommodations, transportation, and activities.</p>
+                            </li>
+                            <li>
+                                <p class="section_description">Holiday travel agencies offer ongoing support to their
+                                    clients, <br>both before and during the trip. </p>
+                            </li>
+                            <li>
+                                <p class="section_description">Some holiday travel agencies specialize in certain types
+                                    of vacations,<br> such as luxury travel, adventure trips,</p>
+                            </li>
                         </ul>
-                        <p class="section_description">In summary, holiday travel agencies serve as valuable partners for individuals <br> seeking assistance in planning and executing their vacations, offering <br> convenience, expertise, and a range of services to enhance the <br> overall travel experience.</p>
+                        <p class="section_description">In summary, holiday travel agencies serve as valuable partners
+                            for individuals <br> seeking assistance in planning and executing their vacations, offering
+                            <br> convenience, expertise, and a range of services to enhance the <br> overall travel
+                            experience.</p>
                         <button class="common_btn">Read more</button>
                     </div>
                     <div class="popular_image">
@@ -73,7 +91,8 @@
         <section id="your_destination">
             <div class="container">
                 <h2 class="section_head">Chose Your Destination</h2>
-                <p class="section_description"> Holiday travel agencies help clients plan their trips by offering expert <br> advice on destinations, travel itineraries, and activities. </p>
+                <p class="section_description"> Holiday travel agencies help clients plan their trips by offering expert
+                    <br> advice on destinations, travel itineraries, and activities. </p>
                 <div class="destination_image">
                     <div class="img_one">
                         <img src="Images/destination_one.png" alt="img">
@@ -107,37 +126,45 @@
             </div>
         </section>
         <!-- why chose us section  -->
-        <section id="chose_us" >
+        <section id="chose_us">
             <div class="container">
                 <h2 class="section_head">Why Chose Us</h2>
-                <p class="section_description"> Holiday travel agencies help clients plan their trips by offering expert <br> advice on destinations, travel itineraries, and activities. </p>
+                <p class="section_description"> Holiday travel agencies help clients plan their trips by offering expert
+                    <br> advice on destinations, travel itineraries, and activities. </p>
                 <div class="chose_us_card">
                     <div class="card one">
                         <img src="Images/hotel.png" alt="img">
                         <h3>Handpicked Hotels</h3>
                         <p>
-                            Hotels, essential to the hospitality industry, <br>offer temporary lodging with diverse accommodations <br>and amenities, ensuring a comfortable and enjoyable <br>stay for travelers worldwide.</p>
+                            Hotels, essential to the hospitality industry, <br>offer temporary lodging with diverse
+                            accommodations <br>and amenities, ensuring a comfortable and enjoyable <br>stay for
+                            travelers worldwide.</p>
                     </div>
                     <div class="card two">
                         <img src="Images/map.png" alt="img">
                         <h3>Handpicked Hotels</h3>
                         <p>
-                            Hotels, essential to the hospitality industry, <br>offer temporary lodging with diverse accommodations <br>and amenities, ensuring a comfortable and enjoyable <br>stay for travelers worldwide.</p>
+                            Hotels, essential to the hospitality industry, <br>offer temporary lodging with diverse
+                            accommodations <br>and amenities, ensuring a comfortable and enjoyable <br>stay for
+                            travelers worldwide.</p>
                     </div>
                     <div class="card three">
                         <img src="Images/ring.png" alt="img">
                         <h3>Handpicked Hotels</h3>
                         <p>
-                            Hotels, essential to the hospitality industry, <br>offer temporary lodging with diverse accommodations <br>and amenities, ensuring a comfortable and enjoyable <br>stay for travelers worldwide.</p>
+                            Hotels, essential to the hospitality industry, <br>offer temporary lodging with diverse
+                            accommodations <br>and amenities, ensuring a comfortable and enjoyable <br>stay for
+                            travelers worldwide.</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- travel benefit section  -->
-        <section id="benefit_part" >
+        <section id="benefit_part">
             <div class="container">
                 <h2 class="section_head">Benefit For User</h2>
-                <p class="section_description">We are self-service data analytics software that lets you create visually appealing <br> data visualizations and insightful dashboards in minutes.</p>
+                <p class="section_description">We are self-service data analytics software that lets you create visually
+                    appealing <br> data visualizations and insightful dashboards in minutes.</p>
                 <div class="benefit_content">
                     <div class="benefit_card cheap">
                         <img src="Images/benefit_1.png" alt="img">
@@ -163,29 +190,100 @@
             </div>
         </section>
         <!-- bonus section  -->
+        <section id="benefit_part">
+            <div class="container">
+                <h2 class="section_head">Deals & Discounts</h2>
+                <p class="section_description">We are self-service data analytics software that lets you create visually
+                    appealing <br> data visualizations and insightful dashboards in minutes.</p>
+                <div class="benefit_content">
+                    <div class="Discounts_section">
+                        <img class="Discounts-images" src="./Images/Group 39.png" alt="">
+                        <div class="Discounts_div">
+                            <div class="discount-icons">
+                                <div><i class="fa-solid fa-clock"></i>7 Day / 6 Night</div>
+                                <div><i class="fa-solid fa-people-group"></i>Max : 10</div>
+                                <div><i class="fa-solid fa-location-dot"></i>Malaise</div>
+                            </div>
+                            <h1 class="discount_title">Tour To Satorini</h1>
+                            <p class="discount_description">Amet consectetur. Vulputate commodo felis
+                                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                                Habitant adipiscing.</p>
+                                <h1 class="discount_titles">Price: $1300-$1500</h1>
+                                <button class="common_btn">Boock Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div id="Discounts_meddile" class="benefit_content">
+                    <div class="Discounts_section">
+                        <img class="Discounts-images" src="./Images/Group 40.png" alt="">
+                        <div id="discount_tag" class="Discounts_div">
+                            <div class="discount-icons">
+                                <div><i class="fa-solid fa-clock"></i>7 Day / 6 Night</div>
+                                <div><i class="fa-solid fa-people-group"></i>Max : 10</div>
+                                <div><i class="fa-solid fa-location-dot"></i>Malaise</div>
+                            </div>
+                            <h1 class="discount_title">Tour To Satorini</h1>
+                            <p class="discount_description">Amet consectetur. Vulputate commodo felis
+                                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                                Habitant adipiscing.</p>
+                                <h1 class="discount_titles">Price: $1300-$1500</h1>
+                                <button class="common_btn">Boock Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="benefit_content">
+                    <div class="Discounts_section">
+                        <img class="Discounts-images" src="./Images/Group 39.png" alt="">
+                        <div class="Discounts_div">
+                            <div class="discount-icons">
+                                <div><i class="fa-solid fa-clock"></i>7 Day / 6 Night</div>
+                                <div><i class="fa-solid fa-people-group"></i>Max : 10</div>
+                                <div><i class="fa-solid fa-location-dot"></i>Malaise</div>
+                            </div>
+                            <h1 class="discount_title">Tour To Satorini</h1>
+                            <p class="discount_description">Amet consectetur. Vulputate commodo felis
+                                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                                Habitant adipiscing.</p>
+                                <h1 class="discount_titles">Price: $1300-$1500</h1>
+                                <button class="common_btn">Boock Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <br>
         <section id="popular_part">
             <div class="container">
                 <div class="popular_content">
                     <div class="popular_text">
                         <h2 class="section_head">A Simple Perfect Place
                             To Get Lost</h2>
-                        <p class="section_description"> Holiday travel agencies help clients plan their trips by offering expert <br> advice on destinations, travel itineraries, and activities. </p>
+                        <p class="section_description"> Holiday travel agencies help clients plan their trips by
+                            offering expert <br> advice on destinations, travel itineraries, and activities. </p>
                         <ul>
-                            <li><p id="li-p" class="section_description">Travel agencies handle the booking of various components of a trip,<br> accommodations, transportation, and activities.</p></li>
-                            <li><p id="li-p" class="section_description">Holiday travel agencies offer ongoing support to their clients, <br>both before and during the trip. </p></li>
-
+                            <li>
+                                <p id="li-p" class="section_description">Travel agencies handle the booking of various
+                                    components of a trip,<br> accommodations, transportation, and activities.</p>
+                            </li>
+                            <li>
+                                <p id="li-p" class="section_description">Holiday travel agencies offer ongoing support
+                                    to their clients, <br>both before and during the trip. </p>
+                            </li>
                         </ul>
-
                         <button class="common_btn">Read more</button>
                     </div>
                     <div class="popular_image">
-                        <iframe width="560" height="400" src="https://www.youtube.com/embed/43I3nqzptEA?si=pmF1TFvM_sIDCM36" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="560" height="400"
+                            src="https://www.youtube.com/embed/43I3nqzptEA?si=pmF1TFvM_sIDCM36"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
         </section>
         <!-- contact section  -->
-        <section id="contact_part" >
+        <section id="contact_part">
             <div class="container">
                 <div class="contact">
                     <div class="contact_content">
@@ -221,7 +319,8 @@
                     <h2>Dream Wings<span>Travel</span></h2>
                 </div>
                 <div class="footer_description">
-                    <p>"Embark on unforgettable journeys with us - Your trusted partner <br> in crafting exceptional travel experiences."</p>
+                    <p>"Embark on unforgettable journeys with us - Your trusted partner <br> in crafting exceptional
+                        travel experiences."</p>
                 </div>
                 <div class="footer_icon">
                     <i class="fa-brands fa-twitter"></i>
@@ -237,4 +336,5 @@
         </div>
     </footer>
 </body>
+
 </html>
