all most finish project

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </div>
         </section>
         <br>
-        <section id="popular_part">
+        <section id="">
             <div class="container">
                 <div class="popular_content">
                     <div class="popular_text">
